--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rangushivakumar.github.io/project/",
+  "homepage": "https://rangushivakumar.github.io/",
   "name": "fourth",
   "private": true,
   "version": "0.0.0",
